--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       background-color: #000;
     }
     .container {
-
+      /*nothing yet */
     }
     .cam {
       width: 408px;
@@ -29,6 +29,7 @@
     <img class="cam"src="http://webkamera.vegvesen.no/kamera?id=410396">
     <img class="cam"src="http://webkamera.vegvesen.no/kamera?id=297619">
     <img class="cam"src="http://webkamera.vegvesen.no/kamera?id=424667">
+    <img src="http://www.yr.no/place/Norway/Akershus/Rælingen/Fjerdingby/avansert_meteogram.png" alt="">
   </div>
 
 </body>
