iframe youtube embed lalalala

--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
 <body>
 
   <div class="container">
-    <img class="cam"src="http://webkamera.vegvesen.no/kamera?id=513151">
+    <iframe class="embed" src="https://www.youtube.com/embed/tbLXWVhu8-Q?rel=0&amp;autoplay=1" frameborder="0" allowfullscreen=""></iframe>    <img class="cam"src="http://webkamera.vegvesen.no/kamera?id=513151">
     <img class="cam"src="http://webkamera.vegvesen.no/kamera?id=410396">
     <img class="cam"src="http://webkamera.vegvesen.no/kamera?id=297619">
     <img class="cam"src="http://webkamera.vegvesen.no/kamera?id=424667">
+
     <img src="http://www.yr.no/place/Norway/Akershus/Rælingen/Fjerdingby/avansert_meteogram.png" alt="">
   </div>
 
